--- a/res/raw/na.html
+++ b/res/raw/na.html
@@ -4,7 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title></title>
 </head>
-<body>
-NA
+<body>NA
 </body>
 </html>
