--- a/res/raw/size.html
+++ b/res/raw/size.html
@@ -6,41 +6,56 @@
 </head>
 <body>
 	<ul class="nolist">
-		<li><code>ldpi</code>: Low-density screens; approximately 120dpi.</li>
-		<li><code>mdpi</code>: Medium-density (on traditional HVGA)
-			screens; approximately 160dpi.</li>
-		<li><code>hdpi</code>: High-density screens; approximately
-			240dpi.</li>
-		<li><code>xhdpi</code>: Extra high-density screens; approximately
-			320dpi. <em>Added in API Level 8</em></li>
-		<li><code>nodpi</code>: This can be used for bitmap resources
-			that you do not want to be scaled to match the device density.</li>
-		<li><code>tvdpi</code>: Screens somewhere between mdpi and hdpi;
-			approximately 213dpi. This is not considered a "primary" density
-			group. It is mostly intended for televisions and most apps shouldn't
-			need it&mdash;providing mdpi and hdpi resources is sufficient for
-			most apps and the system will scale them as appropriate. This
-			qualifier was introduced with API level 13.</li>
+		<li><code>small</code>: Screens that are of similar size to a
+			low-density QVGA screen. The minimum layout size for a small screen
+			is approximately 320x426 dp units. Examples are QVGA low density and
+			VGA high density.</li>
+		<li><code>normal</code>: Screens that are of similar size to a
+			medium-density HVGA screen. The minimum layout size for a normal
+			screen is approximately 320x470 dp units. Examples of such screens a
+			WQVGA low density, HVGA medium density, WVGA high density.</li>
+		<li><code>large</code>: Screens that are of similar size to a
+			medium-density VGA screen. The minimum layout size for a large screen
+			is approximately 480x640 dp units. Examples are VGA and WVGA medium
+			density screens.</li>
+		<li><code>xlarge</code>: Screens that are considerably larger
+			than the traditional medium-density HVGA screen. The minimum layout
+			size for an xlarge screen is approximately 720x960 dp units. In most
+			cases, devices with extra large screens would be too large to carry
+			in a pocket and would most likely be tablet-style devices. <em>Added
+				in API level 9.</em></li>
 	</ul>
-	<p>There is a 3:4:6:8 scaling ratio between the four primary
-		densities (ignoring the tvdpi density). So, a 9x9 bitmap in ldpi is
-		12x12 in mdpi, 18x18 in hdpi and 24x24 in xhdpi.</p>
-	<p>If you decide that your image resources don't look good enough
-		on a television or other certain devices and want to try tvdpi
-		resources, the scaling factor is 1.33*mdpi. For example, a 100px x
-		100px image for mdpi screens should be 133px x 133px for tvdpi.</p>
 	<p class="note">
-		<strong>Note:</strong> Using a density qualifier does not imply that
-		the resources are <em>only</em> for screens of that density. If you do
-		not provide alternative resources with qualifiers that better match
-		the current device configuration, the system may use whichever
-		resources are the <a href="#BestMatch">best match</a>.
+		<strong>Note:</strong> Using a size qualifier does not imply that the
+		resources are <em>only</em> for screens of that size. If you do not
+		provide alternative resources with qualifiers that better match the
+		current device configuration, the system may use whichever resources
+		are the <a href="#BestMatch">best match</a>.
+	</p>
+	<p class="caution">
+		<strong>Caution:</strong> If all your resources use a size qualifier
+		that is <em>larger</em> than the current screen, the system will <strong>not</strong>
+		use them and your application will crash at runtime (for example, if
+		all layout resources are tagged with the
+		<code>xlarge</code>
+		qualifier, but the device is a normal-size screen).
 	</p>
 	<p>
+		<em>Added in API level 4.</em>
+	</p>
+
+	<p>
 		See <a href="/guide/practices/screens_support.html">Supporting
-			Multiple Screens</a> for more information about how to handle different
-		screen densities and how Android might scale your bitmaps to fit the
-		current density.
+			Multiple Screens</a> for more information.
+	</p>
+	<p>
+		Also see the
+		<code>
+			<a
+				href="/reference/android/content/res/Configuration.html#screenLayout">screenLayout</a>
+		</code>
+		configuration field, which indicates whether the screen is small,
+		normal, or large.
 	</p>
 </body>
 </html>
