Minor bug fixes

--- a/res/raw/introduction.html
+++ b/res/raw/introduction.html
@@ -21,11 +21,10 @@
 			</code>.
 			<ul>
 				<li><em><code>&lt;resources_name&gt;</code></em> is the
-					directory name of the corresponding default resources (defined in
-					table 1).</li>
+					directory name of the corresponding default resources.</li>
 				<li><em><code>&lt;qualifier&gt;</code></em> is a name that
 					specifies an individual configuration for which these resources are
-					to be used (defined in table 2).</li>
+					to be used.</li>
 			</ul>
 			<p>
 				You can append more than one <em><code>&lt;qualifier&gt;</code></em>.
@@ -73,9 +72,9 @@ res/</br>
 
 	<p>Android supports several configuration qualifiers and you can
 		add multiple qualifiers to one directory name, by separating each
-		qualifier with a dash. Table 2 lists the valid configuration
+		qualifier with a dash. The list contains the valid configuration
 		qualifiers, in order of precedence&mdash;if you use multiple
 		qualifiers for a resource directory, you must add them to the
-		directory name in the order they are listed in the table.</p>
+		directory name in the order they are listed.</p>
 </body>
 </html>
